<resources>
    <string name="app_name">HelpDesk</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nuevo_ticket">Nuevo Ticket</string>
    <string name="ver_tickets">Ver Tickets</string>
    <string name="bienvenido_al_sistema">Bienvenido al Sistema</string>
    <string name="todo">TODO</string>
    <string name="descripcion">Descripcion</string>
    <string name="dependencia">Dependencia</string>
    <string name="atras">Atras</string>
    <string name="_1">#1</string>
    <string name="ver1">Ver</string>
    <string name="_2">#2</string>
    <string name="solicitud_de_informacion_acerca_de_las_computadoras_disponibles">Solicitud de informacion acerca de las computadoras disponibles</string>
    <string name="actualizar_windows">Actualizar Windows</string>
    <string name="ver2">Ver</string>
</resources>