<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="350dp"
        android:layout_height="537dp"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="59dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="54dp"
                android:layout_height="79dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/_1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="130dp"
                android:layout_height="79dp"
                android:text="@string/solicitud_de_informacion_acerca_de_las_computadoras_disponibles" />

            <Button
                android:id="@+id/button4"
                android:layout_width="67dp"
                android:layout_height="59dp"
                android:text="@string/ver1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="79dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="27dp"
                android:layout_height="79dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/_2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="189dp"
                android:layout_height="63dp"
                android:text="@string/actualizar_windows" />

            <Button
                android:id="@+id/button5"
                android:layout_width="98dp"
                android:layout_height="52dp"
                android:text="@string/ver2" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lista de Tickets "
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647"
        tools:layout_editor_absoluteX="31dp" />

</androidx.constraintlayout.widget.ConstraintLayout>